--- a/src/PuzzleBoxContainer.css
+++ b/src/PuzzleBoxContainer.css
@@ -1,5 +1,10 @@
 .puzzle-box-container {
     border: 1px solid gray;
-    flex-grow: 1;
+    box-sizing: border-box;
     max-height: 200px;
+    padding: 50px;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
