--- a/src/Box.css
+++ b/src/Box.css
@@ -7,5 +7,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.25rem;
+    font-weight: 500;
     background-color: lightcyan;
+    margin: 10px;
 }
