--- a/src/Puzzle.css
+++ b/src/Puzzle.css
@@ -1,7 +1,7 @@
 .puzzle {
-    width: 1200px;
-    height: 900px;
+    width: 70%;
+    max-width: 1200px;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
