--- a/src/PuzzleBoxContainer.css
+++ b/src/PuzzleBoxContainer.css
@@ -1,10 +1,15 @@
 .puzzle-box-container {
     border: 1px solid gray;
     box-sizing: border-box;
-    max-height: 200px;
-    padding: 50px;
-    flex-grow: 1;
+    padding: 10px 20px;
     display: flex;
-    justify-content: space-between;
+    flex-grow: 1;
+    justify-content: center;
     align-items: center;
+}
+
+.puzzle-box-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
